--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1 style="color:mediuspringgreen">This is a header</h1>
-<p>Test</p>
+<p style="color:blue;font-family:courier;">Test</p>
 <table>
   <tr>
     <td>Data1</td>
