--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <h1 style="color:mediuspringgreen">This is a header</h1>
-<p style="color:blue;font-family:courier;">Test</p>
+<p>Test</p>
+<h6>A small header has been created</h6>
+<h3>A large header is beneath</h3>
 <table>
   <tr>
     <td>Data1</td>
