--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1 style="color:mediuspringgreen">This is a header</h1>
-<p style="color:mediumspringgreen;font-family:courier;text-align:center;">Test</p>
+<p style="color:mediumspringgreen;font-family:courier;text-align:center;background-color:black;">Test</p>
 <h6>A small header has been created</h6>
 <h3>A large header is beneath</h3>
 <table>
