Table and Style
Added text-align center and added a border to the table

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<h1 style="color:mediuspringgreen">This is a header</h1>
+<h1 style="color:mediuspringgreen;text-align:center;">This is a header</h1>
 <p style="color:mediumspringgreen;font-family:courier;text-align:center;background-color:black;">Test</p>
-<h6>A small header has been created</h6>
+<h6 style="text-align:center;">A small header has been created</h6>
 <h3>A large header is beneath</h3>
-<table>
+<table border="1">
   <tr>
     <td>Data1</td>
     <td>Data2</td>
@@ -19,3 +19,4 @@
     <td>Data9</td>
   </tr>
 </table>
+
