--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1 style="color:mediuspringgreen;text-align:center;">This is a header</h1>
 <p style="color:mediumspringgreen;font-family:courier;text-align:center;background-color:black;">Test</p>
 <h6 style="text-align:center;">A small header has been created</h6>
-<h3>A large header is beneath</h3>
+<h3 style="color:indigo;font-family:arial;">A large header is beneath</h3>
 <table border="1">
   <tr>
     <td>Data1</td>
