--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <p style="color:mediumspringgreen;font-family:courier;text-align:center;background-color:black;">Test</p>
 <h6 style="text-align:center;">A small header has been created</h6>
 <h3 style="color:indigo;font-family:arial;">A large header is beneath</h3>
+<h2 style="color:mediumspringgreen;font-family:courier;text-align:center;">Yay!</h2>
 <table border="1">
   <tr>
     <td>Data1</td>
